--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+
 
 
     </dependencies>
